align fix

--- a/style-1.css
+++ b/style-1.css
@@ -4,4 +4,45 @@ body {
 	background: #d2e1f8 !important;
 	font-family: "Public Sans", sans-serif !important;
 	color: #6b728d !important;
+    overflow: hidden;
+}
+.light{
+    transition: 1s;
+    --background: linear-gradient(0deg, rgba(255, 255, 255, .1) 0%, rgba(255, 255, 255, .6) 50%, rgba(255, 255, 255, .1) 100%);
+}
+.dark{
+    transition: 1s;
+    --background: #121212;
+}
+a{
+    color: #7a92fe;
+}
+a:hover{
+    color: #fff;
+}
+.container{
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
+.phone{
+    background: var(--background);
+    height: 740px;
+    width: 360px;
+    border-radius: 25px;
+    box-shadow: rgba(104, 139, 255, 0.1) 0px 48px 100px 0px rgba(17, 12, 46, 0.15)0px 30px 100px 0px;
+}
+#top-menu{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5%;
+    text-transform: uppercase;
+    font-size: .7rem;
+    letter-spacing: .1rem;
+    color: #abb3c7;
 }
